@@ -117,6 +117,7 @@ class Imap4 : public Mailbox {
 	PartInfo command_fetchbodystructure (guint) throw (imap_err);
 	std::vector<std::string> command_fetchheader (guint) throw (imap_err);
 	void command_login (void) throw (imap_err);
+	void command_logout (void) throw (imap_err);
 	std::vector<int> command_searchnotseen (void) throw (imap_err);
 	void command_select (void) throw (imap_err);
 	void waitforack (gint num=0) throw (imap_err);
@@ -127,7 +128,6 @@ class Imap4 : public Mailbox {
 													 // periodically. 
 	void update_applet();						 // Update the applet to new IMAP state.
 	void idle() throw (imap_err);		         // Begin idle IMAP mode.
-	void close();								 // Cleanup and close IMAP connection.
 };
 
 /**
